<resources>
    <string name="app_name">QuanLyChiTieu</string>
    <string name="action_settings">Settings</string>
    <string name="quan_ly_chi_tieu">Quản lý chi tiêu</string>
    <string name="don_vi_tien_te">Đơn vị tiền tệ VNĐ</string>
    <string name="tiep_tuc">Tiếp Tục</string>
    <string name="nhap_tien_thang">Số tiền chi trong tháng:</string>
    <string name="chua_nhap_tien_chi">Chưa nhập số tiền chi</string>
    <string name="tong_quan">Tổng quan</string>
    <string name="thu_nhap">Thu nhập</string>
    <string name="chi_tieu">Chi tiêu</string>
    <string name="con_lai">Còn lại</string>
    <string name="an_uong">Ăn uống</string>
    <string name="chi_tiet_an_uong">Ăn sáng, uống coffee</string>
    <string name="mua_sam">Mua sắm</string>
    <string name="di_lai">Đi lại</string>
    <string name="du_lich">Du lịch</string>
    <string name="nguoi_yeu">Người yêu</string>
    <string name="gia_dinh">Gia đình</string>
    <string name="giai_tri">Giải trí</string>
    <string name="suc_khoe">Sức khỏe</string>
    <string name="hoc_tap">Học tập</string>
    <string name="khac">Khác</string>
    <string name="them_giao_dich">Thêm giao dịch</string>
    <string name="chon">Lựa chọn</string>
    <string name="tien">Nhập tiền: </string>
    <string name="chon_ngay">Chọn ngày</string>
    <string name="ghi_chu">Ghi chú:</string>
    <string name="ngay">ngày</string>
    <string name="thang">tháng</string>
    <string name="nam">năm</string>
    <string name="tienChiTieu">tiền</string>
    <string name="nhapTienChiTrongThang">Nhập số tiền chi trong tháng</string>
    <string name="xemChiTieuCuaTungThang">Mời bạn chọn tháng chi tiêu cần xem </string>
    <string name="thang1">Tháng 1</string>
    <string name="thang2">Tháng 2</string>
    <string name="thang3">Tháng 3</string>
    <string name="thang4">Tháng 4</string>
    <string name="thang5">Tháng 5</string>
    <string name="thang6">Tháng 6</string>
    <string name="thang7">Tháng 7</string>
    <string name="thang8">Tháng 8</string>
    <string name="thang9">Tháng 9</string>
    <string name="thang10">Tháng 10</string>
    <string name="thang11">Tháng 11</string>
    <string name="thang12">Tháng 12</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="ban_do">Bán đồ</string>
    <string name="tien_thuong">Tiền thưởng</string>
    <string name="thu_khac">Khác</string>
    <string name="them_khoan_chi">Thêm khoản chi</string>
    <string name="them_khoan_thu">Thêm khoản thu</string>
    <string name="nhap_day_du_thong_tin">Bạn hãy kiểm tra lại xem mình đã nhập đủ thông tin chưa </string>
    <string name="them_thanh_cong">Thêm thành công </string>
    <string name="chua_chon_muc_chi">Mời bạn chọn danh mục chi </string>
    <string name="chua_chon_ngay">Mời bạn chọn ngày chi </string>
    <string name="chua_nhap_tien">Mời bạn nhập số tiền </string>
    <string name="nhac_nho">Bạn đã chi tiêu quá lố trong tháng này, vui lòng cân nhắc lại trước khi chi tiêu </string>
    <string name="chua_chon_muc_thu">Mời bạn chọn danh mục thu </string>
    <string name="chua_chon_ngay_thu">Mời bạn chọn ngày thu </string>
    <string name="chon_moc_thoi_gian_xem_thong_ke">Mời bạn chọn mốc thời gian để xem thống kê</string>
    <string name="thang1_thang3">Tháng 1 đến tháng 3 </string>
    <string name="thang4_thang6">Tháng 4 đến tháng 6 </string>
    <string name="thang7_thang9">Tháng 7 đến tháng 9 </string>
    <string name="thang10_thang12">Tháng 10 đến tháng 12 </string>




</resources>
