<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/colorGray">
            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xemChiTieuCuaTungThang"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/colorGreen"
                android:background="@color/colorGray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:background="@color/colorGray">
            <LinearLayout
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/xemThang1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/thang1"
                        android:textSize="25dp"
                        android:padding="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/xemThang2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang2"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/xemThang3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang3"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang4"
                        android:textSize="25dp"
                        android:padding="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang5"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/thang6"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang7"
                        android:textSize="25dp"
                        android:padding="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang8"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang9"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang10"
                        android:textSize="25dp"
                        android:padding="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang11"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/xemThang12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thang12"
                        android:textSize="25dp"
                        android:padding="5dp"/>

                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
        </LinearLayout>
</LinearLayout>