<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chon_moc_thoi_gian_xem_thong_ke"
            android:padding="30dp"
            android:textSize="20dp"
            android:textColor="@color/colorGreen"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:id="@+id/xemThongKe1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray">

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thang1_thang3"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:id="@+id/xemThongKe2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray">

            <TextView
                android:gravity="center"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thang4_thang6"
                android:textSize="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:id="@+id/xemThongKe3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thang7_thang9"
                android:textSize="20dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:id="@+id/xemThongKe4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray">
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thang10_thang12"
                android:textSize="20dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>