<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quanlychitieu.com.quanlychitieu.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorAqua">

    <TextView
        android:id="@+id/txtQuanLyChiTieu"
        android:text="@string/quan_ly_chi_tieu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30dp"/>
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/images_usd"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtQuanLyChiTieu"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txtDonViTienTe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_vi_tien_te"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:layout_below="@+id/imgView"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnGoToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiep_tuc"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtDonViTienTe"
        android:layout_marginTop="15dp"/>
</RelativeLayout>
