<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/header_date"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtNgayChiTieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtThuChiTieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thang"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtThangNamChiTieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtTongTienChiTieuTrongNgay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tienChiTieu"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorGray"
        android:layout_marginTop="1dp"/>
</LinearLayout>