<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/AU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <ImageView
                android:id="@+id/imgChuyenMucAU"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/an_uong"/>
            <TextView
                android:id="@+id/txtChuyenMuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_uong"
                android:textSize="25dp"
                android:padding="13dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorGray"
                android:layout_marginTop="-10dp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/DL1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/du_lich"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/du_lich"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/MS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/shoppping"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mua_sam"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/DL2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/di_lai"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/di_lai"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/NY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/nguoi_yeu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nguoi_yeu"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/GT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/giai_tri"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/giai_tri"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/HT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/giao_duc"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hoc_tap"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/SK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/suc_khoe"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suc_khoe"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/ChiTieuKhac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/khac"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/khac"
                        android:textSize="25dp"
                        android:padding="13dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorGray"
                    android:layout_marginTop="-5dp"/>
            </LinearLayout>

        </LinearLayout>
</ScrollView>


</RelativeLayout>

